[gd_scene load_steps=3 format=3 uid="uid://d0mwa7opmiho0"]

[ext_resource type="Script" path="res://app/main-menu/select-player/select_player.gd" id="1_5kpjb"]
[ext_resource type="Texture2D" uid="uid://cpcey5vrxd20" path="res://common/scroll.jpg" id="2_oju24"]

[node name="MainMenuSelectPlayer" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -152.5
offset_right = 202.0
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5kpjb")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "Choose Your Player"

[node name="Selector" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="List" type="VBoxContainer" parent="Selector"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="PlayerDetails" type="VBoxContainer" parent="Selector"]
layout_mode = 2

[node name="View" type="SubViewportContainer" parent="Selector/PlayerDetails"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="Selector/PlayerDetails/View"]
disable_3d = true
handle_input_locally = false
size = Vector2i(256, 256)
render_target_update_mode = 4

[node name="Background" type="Sprite2D" parent="Selector/PlayerDetails/View/SubViewport"]
position = Vector2(128, 128)
texture = ExtResource("2_oju24")

[node name="Description" type="RichTextLabel" parent="Selector/PlayerDetails"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/bold_italics_font_size = 14
theme_override_font_sizes/italics_font_size = 14
theme_override_font_sizes/mono_font_size = 14
theme_override_font_sizes/normal_font_size = 14
theme_override_font_sizes/bold_font_size = 14
text = "This is just some player details"
fit_content = true

[node name="Stats" type="GridContainer" parent="Selector/PlayerDetails"]
layout_mode = 2
columns = 2

[node name="Life" type="HBoxContainer" parent="Selector/PlayerDetails/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerDetails/Stats/Life"]
layout_mode = 2
text = "Life"

[node name="Value" type="Label" parent="Selector/PlayerDetails/Stats/Life"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "5"
horizontal_alignment = 1

[node name="Speed" type="HBoxContainer" parent="Selector/PlayerDetails/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerDetails/Stats/Speed"]
layout_mode = 2
text = "Speed"

[node name="Value" type="Label" parent="Selector/PlayerDetails/Stats/Speed"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "5"
horizontal_alignment = 1

[node name="ProjectilesCnt" type="HBoxContainer" parent="Selector/PlayerDetails/Stats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Selector/PlayerDetails/Stats/ProjectilesCnt"]
layout_mode = 2
text = "Projectiles"

[node name="Value" type="Label" parent="Selector/PlayerDetails/Stats/ProjectilesCnt"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "5"
horizontal_alignment = 1

[node name="Controls" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Return" type="Button" parent="Controls"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Return"

[node name="Continue" type="Button" parent="Controls"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Continue"

[connection signal="button_up" from="Controls/Return" to="." method="_return_from"]
[connection signal="button_up" from="Controls/Continue" to="." method="_continue_to"]
